# dat

./: .gitignore  README.md  pyproject.toml
src/dat/: dat.py  draft.py  journal.py
