[project]
name = "dat"
version = "0.1.0"
description = "Research data management inspired by git"
authors = [
    { name = "Christopher Albert", email = "albert@alumni.tugraz.at" },
]
license = {text = "MIT License"}
readme = "README.md"
keywords = ["rdm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "elabapy>=1.1.0",
]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/elabftw/elabapy"
documentation = "https://example.com/docs"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
